--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./normalize.css">
     <link rel="stylesheet" type="text/css" href="./geeknav.css">
-    <script src="http://libs.baidu.com/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="./template.js"></script>
     <script src="https://cdn1.lncld.net/static/js/av-min-1.2.1.js"></script>
     <script>AV.initialize("f4pzJPaUSBRlbFO64I5AtfDl-gzGzoHsz", "GcudjKxp5sEaRrOUbiQqdNwk");</script>
