--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 
     <script src="./geeknav-data.js"></script>
     <script src="./geeknav.js"></script>
-    <title>极客之路 - 属于程序员的网址导航</title>
+    <title>极客之路 - 一个程序猿的网址导航</title>
   </head>
 
   <body>
