--- a/test.htm
+++ b/test.htm
@@ -1,7 +1,7 @@
 <html>
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-<button id="btn1"></button>
-<button id="btn2"></button>
+<button id="btn1">btn1</button>
+<button id="btn2">btn2</button>
 <script>
     $("#btn1").click(function () {
         var formData = new FormData();
