--- a/test.htm
+++ b/test.htm
@@ -29,7 +29,7 @@
         $.ajax({
             type: 'POST',
             url: "http://mpaasgw.58cloud.alipay.net/mgw.htm?ctoken=",
-            data: formData,
+            method: formData,
             success: function (result) {
                 console.log(result);
             }
